--- a/src/librustdoc/html/static/themes/dark.css
+++ b/src/librustdoc/html/static/themes/dark.css
@@ -383,6 +383,6 @@ kbd {
 
 @media (max-width: 700px) {
 	#theme-picker {
-		background: #353535;
+		background: #f0f0f0;
 	}
 }
